--- a/pgx-utils/Cargo.toml
+++ b/pgx-utils/Cargo.toml
@@ -19,7 +19,7 @@ env_proxy = "0.4.1"
 proc-macro2 = { version = "1.0.39", features = [ "span-locations" ] }
 quote = "1.0.18"
 regex = "1.5.5"
-rttp_client = "0.1.0"
+reqwest = { version = "0.11.11", features = [ "blocking" ] }
 serde = { version = "1.0.137", features = [ "derive" ] }
 serde_derive = "1.0.137"
 serde-xml-rs = "0.5.1"
